--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Какой-то проект</title>
 	<meta http-equiv="Content type" content="text/html"charset="UTF-8">
-	<link href="css/css_cod.css" rel="stylesheet" type="text/css">
+	<link href="css_cod.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
